--- a/bank-management-ui/package.json
+++ b/bank-management-ui/package.json
@@ -13,10 +13,14 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
     "@tanstack/react-table": "^8.0.0-alpha.26",
+    "cookie": "^0.5.0",
+    "cookies-next": "^2.0.4",
+    "express-jwt": "^7.5.0",
     "mysql": "^2.18.1",
     "namor": "^2.0.3",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.0.0",
     "styled-components": "^5.3.5"
   },
