--- a/bank-management-ui/package.json
+++ b/bank-management-ui/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
+    "@mui/x-data-grid": "^5.10.0",
     "@tanstack/react-table": "^8.0.0-alpha.26",
     "cookie": "^0.5.0",
     "cookies-next": "^2.0.4",
